# rurl

./: Cargo.toml  LICENSE  PACKAGE_INFO.md  README.md  TODO.md  mise.toml  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  ci.yml  devskim.yml  publish.yml  release.yml
src/: args.rs  client.rs  http.rs  http2.rs  lib.rs  main.rs  response.rs  tests.rs  utils.rs
src/args/: mod.rs
src/http/: client.rs  mod.rs  request.rs  response.rs  url.rs
